[Tech Debt] Add min-height to chart sections to avoid jumps when charts load

--- a/sass/pages/root/_main-data.scss
+++ b/sass/pages/root/_main-data.scss
@@ -8,4 +8,20 @@
   @include at-media("tablet") {
     border-right: none;
   }
+
+  .locations-and-languages-section {
+    min-height: 40rem;
+  }
+
+  .sessions-30-days-section {
+    min-height: 10rem;
+  }
+
+  .traffic-sources-section {
+    min-height: 40rem;
+  }
+
+  .device-demographics-section {
+    min-height: 40rem;
+  }
 }
